# soft3d

./: .gitignore  .gitmodules  CMakeLists.txt  EmbedFile.cmake  README.md
resources/: cup.mtl
src/: CMakeLists.txt
src/demo/: 2ddemo.h  3ddemo.h  CMakeLists.txt  main.cpp
src/focg/: CMakeLists.txt  curve.h  geom.h  loader.h  raytracer.h  screen.h  util.h
src/focg/backend/: interface.h
src/focg/backend/cpu/: renderer.cpp  renderer.h
src/focg/backend/rtcpu/: renderer.cpp  renderer.h
src/focg/backend/zcpu/: renderer.cpp  renderer.h
src/focg/common/: curve.h  filter.h  geom.h  image.h  linalg.h  scene.h  screen.h  transform.h  util.h
src/focg/engine/: engine.cpp  engine.h  loader.h
src/focg/tests/: linalg_test.cpp
src/nuguri3d/: CMakeLists.txt
src/nuguri3d/backend/: interface.h
src/nuguri3d/backend/rtcpu/: renderer.cpp  renderer.h
src/nuguri3d/backend/zcpu/: renderer.cpp  renderer.h
src/nuguri3d/common/: curve.h  filter.h  geom.h  image.h  linalg.h  scene.h  texture.h  threadpool.h  transform.h  util.h
src/nuguri3d/engine/: engine.cpp  engine.h  loader.cpp  loader.h
src/nuguri3d/tests/: linalg_test.cpp
src/soft3d/: CMakeLists.txt
src/soft3d/backend/: interface.h
src/soft3d/backend/rtcpu/: renderer.cpp  renderer.h
src/soft3d/backend/zcpu/: renderer.cpp  renderer.h
src/soft3d/common/: bvhtree.h  curve.h  filter.h  geom.h  idresource.h  image.h  resourcelist.h  scene.h  texture.h  threadpool.h  transform.h  util.h
src/soft3d/engine/: engine.cpp  engine.h  loader.h
src/soft3d/image/: filter.h  image.h  texture.h
src/soft3d/math/: curve.h  linalg.h  transform.h
src/soft3d/renderer/: interface.h
src/soft3d/renderer/rtcpu/: rtcpu.cpp  rtcpu.h
src/soft3d/renderer/zcpu/: zcpu.cpp  zcpu.h
src/soft3d/runtime/: loader.cpp  loader.h  runtime.cpp  runtime.h
src/soft3d/scene/: bvhtree.h  geom.h  ray.h  scene.h
